--- a/reactapp/src/css/index.css
+++ b/reactapp/src/css/index.css
@@ -1,18 +1,17 @@
 /* ************************************************************************** */
 /*                                                                            */
-/*  index.js                                                                  */
+/*  index.css                                                                 */
 /*                                                                            */
 /*   By: elhmn <www.elhmn.com>                                                */
 /*             <nleme@live.fr>                                                */
 /*                                                                            */
 /*   Created: Sun Sep 16 17:18:36 2018                        by elhmn        */
-/*   Updated: Sun Sep 16 21:52:26 2018                        by elhmn        */
+/*   Updated: Sun Sep 16 19:56:04 2018                        by elhmn        */
 /*                                                                            */
 /* ************************************************************************** */
 
-import React from 'react';
-import ReactDOM from 'react-dom';
-import './css/index.css';
-import App from './components/App.js';
-
-ReactDOM.render(<App />, document.getElementById('root'));
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
